# sebden

./: Cargo.toml  README.md
adapters/: Cargo.toml
adapters/src/http/: handler.rs  mod.rs
adapters/src/http/user/: handlers.rs  mod.rs  models.rs  routes.rs
adapters/src/http/wellknown/: handlers.rs  routes.rs
api-server/: Cargo.toml
api-server/src/: main.rs  router.rs
application/: Cargo.toml
application/src/: factories.rs  lib.rs  macros.rs  user_service.rs  wellknown_service.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/user/: mod.rs  repository.rs  user.rs
domain/src/wellknown/: version.rs
infrastructure/: .gitignore  Cargo.toml  README.md
infrastructure/migrations/: 20240304075756_create_initial_tables.sql
infrastructure/src/: database.rs  lib.rs
infrastructure/src/config/: app_config.rs  mod.rs
infrastructure/src/repositories/: user_repository_impl.rs
