[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
axum = { version = "0.7.4", features = ["macros"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
async-trait = "0.1.77"