[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapters = { path = "../adapters" }
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = "0.7.3"
