[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
config = "0.14.0"
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }
